--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="style.css" />
+        <link rel="manifest" href="manifest.webmanifest">
+        <script src="script.js" defer></script>
 		<title>Notes | PWA</title>
 	</head>
 	<body>
 		<div class="app-container center">
-            <h3 class="text-center" > something </h3>
+            <h3 contenteditable="true" class="text-center" > something </h3>
             <hr>
-            <textarea class="center" id="notepad" ></textarea>
+            <textarea class="center" id="notepad" placeholder="start writing from here..." ></textarea>
 		</div>
 	</body>
 </html>
