some minor changes
made variable for notepad element
handled the filename change

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<div class="app-container center">
-            <h3 contenteditable="true" class="text-center" > something </h3>
+            <h3 contenteditable="true" class="text-center" id="filename"> something </h3>
             <hr>
             <textarea class="center" id="notepad" placeholder="start writing from here..." ></textarea>
 		</div>
