--- a/index.html
+++ b/index.html
@@ -3,16 +3,23 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="style.css" />
-        <link rel="manifest" href="manifest.webmanifest">
-        <script src="script.js" defer></script>
+		<link rel="stylesheet" href="style.css" />
+		<link rel="manifest" href="manifest.webmanifest" />
+		<script type="module" src="script.js" defer></script>
 		<title>Notes | PWA</title>
 	</head>
 	<body>
 		<div class="app-container center">
-            <h3 contenteditable="true" class="text-center" id="filename"> something </h3>
-            <hr>
-            <textarea class="center" id="notepad" placeholder="start writing from here..." ></textarea>
+			<div id="save-indicator"></div>
+			<h3 contenteditable="true" class="text-center" id="filename">
+				something
+			</h3>
+			<hr />
+			<textarea
+				class="center"
+				id="notepad"
+				placeholder="start writing from here..."
+			></textarea>
 		</div>
 	</body>
 </html>
