implemented indexeddb set localstorage currentFileId to store the last opened file implemented autosaving

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="style.css" />
 		<link rel="manifest" href="manifest.webmanifest" />
+		<script src="https://unpkg.com/idb/build/iife/index-min.js" defer></script>
 		<script type="module" src="script.js" defer></script>
 		<title>Notes | PWA</title>
 	</head>
@@ -12,7 +13,6 @@
 		<div class="app-container center">
 			<div id="save-indicator"></div>
 			<h3 contenteditable="true" class="text-center" id="filename">
-				something
 			</h3>
 			<hr />
 			<textarea
