--- a/index.html
+++ b/index.html
@@ -10,16 +10,36 @@
 		<title>Notes | PWA</title>
 	</head>
 	<body>
-		<div class="app-container center">
-			<div id="save-indicator"></div>
-			<h3 contenteditable="true" class="text-center" id="filename">
-			</h3>
-			<hr />
-			<textarea
-				class="center"
-				id="notepad"
-				placeholder="start writing from here..."
-			></textarea>
+		<div class="app-container left">
+			<!-- left panel -->
+			<div class="left-panel">
+				<div class="search-container">
+					<input type="search" name="" id="" placeholder="Search" />
+				</div>
+				<div class="options-container"></div>
+				<div class="files-container">
+					<div class="file">
+						<p>something 1</p>
+					</div>
+					<div class="file">
+						<p>something 1</p>
+					</div>
+					<div class="file">
+						<p>something 1</p>
+					</div>
+				</div>
+			</div>
+
+			<!-- main editing area -->
+			<div class="notepad-container">
+				<div id="save-indicator"></div>
+				<h3 contenteditable="true" class="text-center" id="filename"></h3>
+				<textarea
+					class="center"
+					id="notepad"
+					placeholder="start writing from here..."
+				></textarea>
+			</div>
 		</div>
 	</body>
 </html>
