made the delete button and the add file button #3

--- a/index.html
+++ b/index.html
@@ -16,16 +16,27 @@
 				<div class="search-container">
 					<input type="search" name="" id="" placeholder="Search" />
 				</div>
-				<div class="options-container"></div>
+				<div class="options-container">
+					<button class="add-btn remove-btn-style" >ADD</button>
+				</div>
 				<div class="files-container">
 					<div class="file">
 						<p>something 1</p>
+						<button class="delete-btn remove-btn-style">
+							DEL
+						</button>
 					</div>
 					<div class="file">
 						<p>something 1</p>
+						<button class="delete-btn remove-btn-style">
+							DEL
+						</button>
 					</div>
 					<div class="file">
 						<p>something 1</p>
+						<button class="delete-btn remove-btn-style">
+							DEL
+						</button>
 					</div>
 				</div>
 			</div>
