added delete button in the file heading #3

--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
 			<!-- main editing area -->
 			<div class="notepad-container">
 				<div id="save-indicator"></div>
-				<h3 contenteditable="true" class="text-center" id="filename"></h3>
+				<div class="file-head-container">
+					<h3 contenteditable="true" class="text-center" id="filename"></h3>
+					<button class="current-delete-btn" >DEL</button>
+				</div>
 				<textarea
 					class="center"
 					id="notepad"
