made function to create the file list in left panel

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<button class="add-btn remove-btn-style" >ADD</button>
 				</div>
 				<div class="files-container">
-					<div class="file">
+					<!-- <div class="file">
 						<p>something 1</p>
 						<button class="delete-btn remove-btn-style">
 							DEL
@@ -37,7 +37,7 @@
 						<button class="delete-btn remove-btn-style">
 							DEL
 						</button>
-					</div>
+					</div> -->
 				</div>
 			</div>
 
