managed display of text editor for mobile view

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
 			<!-- main editing area -->
 			<div class="notepad-container">
+				<button class="back-btn" >BACK</button>
 				<div id="save-indicator"></div>
 				<div class="file-head-container">
 					<h3 contenteditable="true" class="text-center" id="filename"></h3>
