--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<button class="back-btn" >BACK</button>
 				<div id="save-indicator"></div>
 				<div class="file-head-container">
-					<h3 contenteditable="true" class="text-center" id="filename"></h3>
+					<input type="text" class="text-center" id="filename" />
 					<button class="current-delete-btn" >DEL</button>
 				</div>
 				<textarea
