made theme for light mode

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<script type="module" src="script.js" defer></script>
 		<title>Notes | PWA</title>
 	</head>
-	<body class="dark">
+	<body >
 		<div class="app-container left">
 			<!-- left panel -->
 			<div class="left-panel">
@@ -17,7 +17,9 @@
 					<input type="search" name="" id="" placeholder="Search" />
 				</div>
 				<div class="options-container">
-					<button class="add-btn remove-btn-style" >ADD</button>
+					<button class="add-btn remove-btn-style" >
+						+ Add new File
+					</button>
 				</div>
 				<div class="files-container">
 					<!-- 
