made theme for dark mode

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<script type="module" src="script.js" defer></script>
 		<title>Notes | PWA</title>
 	</head>
-	<body >
+	<body class="dark">
 		<div class="app-container left">
 			<!-- left panel -->
 			<div class="left-panel">
