styled back button

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 
 			<!-- main editing area -->
 			<div class="notepad-container">
-				<button class="back-btn" >BACK</button>
 				<div id="save-indicator"></div>
 				<div class="file-head-container">
+					<button class="back-btn remove-btn-style" >←</button>
 					<input type="text" class="text-center" id="filename" />
 					<button class="current-delete-btn" >DEL</button>
 				</div>
