--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 			<!-- left panel -->
 			<div class="left-panel">
 				<div class="search-container">
+					<button class="mode-btn remove-btn-style" >Dark</button>
 					<input type="search" name="" id="" placeholder="Search" />
 				</div>
 				<div class="options-container">
