--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="/style.css" />
 		<link rel="manifest" href="manifest.webmanifest" />
 		<script src="https://unpkg.com/idb/build/iife/index-min.js" defer></script>
-		<script type="module" src="script.js" defer></script>
+		<script type="module" src="/script.js" defer></script>
 		<title>Notes | PWA</title>
 	</head>
 	<body class="dark">
