--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<button class="mode-btn remove-btn-style">
 						<span class="material-icons-round"> dark_mode </span>
 					</button>
-					<input type="search" name="" id="" placeholder="Search" />
+					<input type="search" name="" id="search" placeholder="Search" spellcheck="false" />
 				</div>
 				<div class="options-container">
 					<button class="add-btn remove-btn-style">
@@ -46,7 +46,7 @@
 					<button class="back-btn remove-btn-style">
 						<span class="material-icons-round"> arrow_back </span>
 					</button>
-					<input type="text" class="text-center" id="filename" />
+					<input type="text" class="text-center" id="filename" spellcheck="false" />
 					<button class="current-delete-btn">
 						<span class="material-icons-round"> delete_forever </span>
 					</button>
