made mnospace switch

--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
 					<button class="mode-btn remove-btn-style">
 						<span class="material-icons-round"> dark_mode </span>
 					</button>
-					<input type="search" name="" id="search" placeholder="Search" spellcheck="false" />
+					<input
+						type="search"
+						name=""
+						id="search"
+						placeholder="Search"
+						spellcheck="false"
+					/>
 				</div>
 				<div class="options-container">
 					<button class="add-btn remove-btn-style">
@@ -37,6 +43,15 @@
 						</button>
 					</div> -->
 				</div>
+				<div class="footer">
+					<span class="font-mode">
+						<span>monospace</span>
+						<label class="switch">
+							<input type="checkbox" checked />
+							<span class="slider round"></span>
+						</label>
+					</span>
+				</div>
 			</div>
 
 			<!-- main editing area -->
@@ -46,7 +61,12 @@
 					<button class="back-btn remove-btn-style">
 						<span class="material-icons-round"> arrow_back </span>
 					</button>
-					<input type="text" class="text-center" id="filename" spellcheck="false" />
+					<input
+						type="text"
+						class="text-center"
+						id="filename"
+						spellcheck="false"
+					/>
 					<button class="current-delete-btn">
 						<span class="material-icons-round"> delete_forever </span>
 					</button>
