--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					<span class="font-mode">
 						<span>monospace</span>
 						<label class="switch">
-							<input type="checkbox" checked />
+							<input type="checkbox" id="font-mode" checked />
 							<span class="slider round"></span>
 						</label>
 					</span>
