--- a/index.html
+++ b/index.html
@@ -51,6 +51,15 @@
 							<span class="slider round"></span>
 						</label>
 					</span>
+					<!-- <p class="repo-link">
+						check it out on
+						<a
+							href="https://github.com/mohitk0208/notes-pwa"
+							target="_blank"
+							rel="noopener noreferrer"
+							>Github</a
+						>
+					</p> -->
 				</div>
 			</div>
 
