added spaces when Tab is pressed

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 					class="center"
 					id="notepad"
 					placeholder="start writing from here..."
+					spellcheck="false"
 				></textarea>
 			</div>
 		</div>
