fixed icons alignment

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 				</div>
 				<div class="options-container">
 					<button class="add-btn remove-btn-style">
-						<span class="material-icons-round"> note_add </span> Add new File
+						<span class="material-icons-round"> note_add </span>
+						<span>Add new File</span>
 					</button>
 				</div>
 				<div class="files-container">
