--- a/index.html
+++ b/index.html
@@ -3,13 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.ico" />
-    <link rel="manifest" href="manifest.webmanifest" />
     <link
       rel="stylesheet"
+      crossorigin="anonymous"
       href="https://fonts.googleapis.com/icon?family=Material+Icons+Round"
     />
+    <!-- <link
+        rel="stylesheet"
+        crossorigin="anonymous"
+        href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;700&family=Fira+Sans:wght@400;700&display=swap"
+      /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Notes | PWA</title>
+    <meta
+      name="description"
+      content="A Simple and light weight note making PWA"
+    />
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+    <link
+      rel="alternate icon"
+      href="/favicon.ico"
+      type="image/png"
+      sizes="16x16"
+    />
+    <!-- <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180"> -->
+    <link rel="mask-icon" href="/favicon.svg" color="#FFA500" />
+    <meta name="theme-color" content="#FFA500" />
   </head>
   <body>
     <div class="app-container left">
@@ -62,15 +81,6 @@
               <span class="slider round"></span>
             </label>
           </span>
-          <!-- <p class="repo-link">
-						check it out on
-						<a
-							href="https://github.com/mohitk0208/notes-pwa"
-							target="_blank"
-							rel="noopener noreferrer"
-							>Github</a
-						>
-					</p> -->
         </div>
       </div>
 
