created and styled the help modal

--- a/index.html
+++ b/index.html
@@ -103,9 +103,17 @@
       </div>
     </div>
 
-    <div class="help-modal-container">
+    <div class="help-modal-container show">
       <div class="help-modal-overlay"></div>
-      <div class="help-modal"></div>
+      <div class="help-modal">
+        <div class="help-modal--header">
+          <h2 class="help-modal--header__heading">Keyboard Shortcuts</h2>
+          <button class="help-modal--close-btn remove-btn-style">
+            <span class="material-icons-round"> close </span>
+          </button>
+        </div>
+        <div class="help-modal--body"></div>
+      </div>
     </div>
 
     <script type="module" src="/src/main.ts"></script>
