made a function to create the help modal

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       </div>
     </div>
 
-    <div class="help-modal-container show">
+    <div class="help-modal-container">
       <div class="help-modal-overlay"></div>
       <div class="help-modal">
         <div class="help-modal--header">
