added placehoder attribute
closes #28

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
             class="text-center"
             id="filename"
             spellcheck="false"
+            placeholder="Enter File Name"
           />
           <button class="current-delete-btn">
             <span class="material-icons-round"> delete_forever </span>
