added copy to clipboard button for file name

--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
             spellcheck="false"
             placeholder="Enter File Name"
           />
+          <button class="copy-filename-btn remove-btn-style">
+            <span class="material-icons-round"> content_copy </span>
+          </button>
           <button class="current-delete-btn">
             <span class="material-icons-round"> delete_forever </span>
           </button>
