added a wrapper div element for the text area

--- a/index.html
+++ b/index.html
@@ -98,12 +98,14 @@
             <span class="material-icons-round"> delete_forever </span>
           </button>
         </div>
-        <textarea
-          class="center"
-          id="notepad"
-          placeholder="start writing from here..."
-          spellcheck="false"
-        ></textarea>
+        <div class="notepad-textarea-wrapper">
+          <textarea
+            class="center"
+            id="notepad"
+            placeholder="start writing from here..."
+            spellcheck="false"
+          ></textarea>
+        </div>
       </div>
     </div>
 
