copy notepad text button added

--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
             placeholder="start writing from here..."
             spellcheck="false"
           ></textarea>
+          <button class="copy-notepad-content-btn remove-btn-style">
+            <span class="material-icons-round"> content_copy </span>
+          </button>
         </div>
       </div>
     </div>
