made a tooltip class and tooltip custom data attribute

--- a/index.html
+++ b/index.html
@@ -31,10 +31,16 @@
       <!-- left panel -->
       <div class="left-panel">
         <div class="utility-btns-container">
-          <button class="help-btn remove-btn-style">
+          <button
+            class="help-btn remove-btn-style tooltip tooltip-bottom"
+            data-tooltip="alt+h"
+          >
             <span class="material-icons-round"> help_outline </span>
           </button>
-          <button class="mode-btn remove-btn-style">
+          <button
+            class="mode-btn remove-btn-style tooltip tooltip-bottom"
+            data-tooltip="alt+t"
+          >
             <span class="material-icons-round"> dark_mode </span>
           </button>
         </div>
