--- a/index.html
+++ b/index.html
@@ -61,11 +61,24 @@
               style="display: none"
               accept=".json"
             />
-            <button class="outline-btn import-btn">import</button>
-            <button class="outline-btn export-btn">export</button>
+            <button
+              class="outline-btn import-btn tooltip tooltip-bottom"
+              data-tooltip="alt+i"
+            >
+              import
+            </button>
+            <button
+              class="outline-btn export-btn tooltip tooltip-bottom"
+              data-tooltip="alt+e"
+            >
+              export
+            </button>
           </div>
           <div class="add-btn-container">
-            <button class="add-btn remove-btn-style">
+            <button
+              class="add-btn remove-btn-style tooltip tooltip-bottom"
+              data-tooltip="alt+n"
+            >
               <span class="material-icons-round"> note_add </span>
               <span>Add new File</span>
             </button>
@@ -97,10 +110,16 @@
             spellcheck="false"
             placeholder="Enter File Name"
           />
-          <button class="copy-filename-btn remove-btn-style">
+          <button
+            class="copy-filename-btn remove-btn-style tooltip tooltip-bottom"
+            data-tooltip="copy filename"
+          >
             <span class="material-icons-round"> content_copy </span>
           </button>
-          <button class="current-delete-btn">
+          <button
+            class="current-delete-btn tooltip tooltip-left"
+            data-tooltip="delete current file"
+          >
             <span class="material-icons-round"> delete_forever </span>
           </button>
         </div>
@@ -111,7 +130,10 @@
             placeholder="start writing from here..."
             spellcheck="false"
           ></textarea>
-          <button class="copy-notepad-content-btn remove-btn-style">
+          <button
+            class="copy-notepad-content-btn remove-btn-style tooltip tooltip-left"
+            data-tooltip="copy text"
+          >
             <span class="material-icons-round"> content_copy </span>
           </button>
         </div>
