added download button

--- a/index.html
+++ b/index.html
@@ -111,6 +111,12 @@
             placeholder="Enter File Name"
           />
           <button
+            class="download-btn remove-btn-style tooltip tooltip-bottom"
+            data-tooltip="download as .txt"
+          >
+            <span class="material-icons-round"> file_download </span>
+          </button>
+          <button
             class="copy-filename-btn remove-btn-style tooltip tooltip-bottom"
             data-tooltip="copy filename"
           >
