fix: disable autocomplete suggestions for filename input element

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
             id="filename"
             spellcheck="false"
             placeholder="Enter File Name"
+            autocomplete="off"
           />
           <button
             class="download-btn remove-btn-style tooltip tooltip-bottom"
