feat: delete files with empty content

--- a/index.html
+++ b/index.html
@@ -74,13 +74,21 @@
               export
             </button>
           </div>
-          <div class="add-btn-container">
+          <div class="files-action-container">
             <button
               class="add-btn remove-btn-style tooltip tooltip-bottom"
               data-tooltip="alt+n"
             >
               <span class="material-icons-round"> note_add </span>
               <span>Add new File</span>
+            </button>
+
+            <button
+              class="purge-btn remove-btn-style tooltip tooltip-bottom"
+              data-tooltip="purge empty files"
+            >
+              <span class="material-icons-round"> delete_sweep </span>
+              <span>Purge</span>
             </button>
           </div>
         </div>
